[gd_scene load_steps=16 format=2]

[ext_resource path="res://games/game1/scripts/Game1.gd" type="Script" id=1]
[ext_resource path="res://addons/virtual_keyboard/scenes/Keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/secret_word/SecretWord.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/back_key_secret.svg" type="Texture" id=4]
[ext_resource path="res://assets/gui/keyboard.tres" type="Theme" id=5]
[ext_resource path="res://addons/click_win/Collection.gd" type="Script" id=6]
[ext_resource path="res://addons/click_win/Chunck.tscn" type="PackedScene" id=7]
[ext_resource path="res://games/game1/sprites/asadelta.jpg" type="Texture" id=8]
[ext_resource path="res://games/game1/sprites/bicicleta.jpg" type="Texture" id=9]
[ext_resource path="res://games/game1/sprites/equipamento_aquatico.jpg" type="Texture" id=10]
[ext_resource path="res://games/game1/sprites/ornitoptero.jpg" type="Texture" id=11]
[ext_resource path="res://games/game1/sprites/paraquedas.jpg" type="Texture" id=12]
[ext_resource path="res://games/game1/sprites/ponte.jpg" type="Texture" id=13]
[ext_resource path="res://games/game1/sprites/robo.jpg" type="Texture" id=14]
[ext_resource path="res://games/game1/sprites/skis.jpg" type="Texture" id=15]

[node name="Game1" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="keyboard" parent="." index="0" instance=ExtResource( 2 )]

visible = false
margin_bottom = 316.0

[node name="secret_word" parent="." index="1" instance=ExtResource( 3 )]

margin_left = 2.0
margin_top = 364.0
margin_right = 802.0
margin_bottom = 429.0
_sections_unfolded = [ "Rect" ]
back_texture = ExtResource( 4 )
back_dimension = Vector2( 60, 60 )
key_theme = ExtResource( 5 )
show_letters = true
character = "*"

[node name="tokens" type="Node2D" parent="." index="2"]

editor/display_folded = true
visible = false
script = ExtResource( 6 )
num_elements = 3

[node name="i1" parent="tokens" index="0" instance=ExtResource( 7 )]

position = Vector2( 406, 267 )
scale = Vector2( 0.274237, 0.274237 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Asa-delta"

[node name="i2" parent="tokens" index="1" instance=ExtResource( 7 )]

position = Vector2( 405.615, 584.042 )
scale = Vector2( 0.679507, 0.679507 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Bicleta"

[node name="i3" parent="tokens" index="2" instance=ExtResource( 7 )]

position = Vector2( 402.674, 895.75 )
scale = Vector2( 1.66299, 1.66299 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Equipamento aquático"

[node name="i4" parent="tokens" index="3" instance=ExtResource( 7 )]

position = Vector2( 875.156, 267.084 )
scale = Vector2( 0.893093, 0.650475 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Ornitóptero"

[node name="i5" parent="tokens" index="4" instance=ExtResource( 7 )]

position = Vector2( 844.541, 599.803 )
rotation = -0.0158447
scale = Vector2( 1.66536, 1.21295 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Para quedas"

[node name="i6" parent="tokens" index="5" instance=ExtResource( 7 )]

position = Vector2( 926.631, 895.308 )
rotation = -0.0158447
scale = Vector2( 1.79239, 1.30547 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Ponte"

[node name="i7" parent="tokens" index="6" instance=ExtResource( 7 )]

position = Vector2( -73.9312, 275.582 )
scale = Vector2( 0.705515, 0.494166 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Ponte"

[node name="i8" parent="tokens" index="7" instance=ExtResource( 7 )]

position = Vector2( -51.6004, 593.58 )
scale = Vector2( 0.695361, 0.506459 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
name = "Skis"

[node name="p1" type="Position2D" parent="." index="3"]

position = Vector2( 406, 267 )
_sections_unfolded = [ "Transform" ]

[connection signal="enter_pressed" from="keyboard" to="." method="_on_Keyboard_enter_pressed"]

[connection signal="key_pressed" from="keyboard" to="." method="_on_keyboard_key_pressed"]

[connection signal="correct_secret_word" from="secret_word" to="." method="_on_secret_word_correct_secret_word"]


